Made jar executable

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ jacocoTestCoverageVerification {
 	}
 }
 
+bootRepackage {
+       executable = true
+}
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
