Added jar section in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,11 @@ jacocoTestCoverageVerification {
 	}
 }
 
+jar {
+	baseName = 'calculator'
+	version = '0.0.1-SNAPSHOT'
+}
+
 bootRepackage {
        executable = true
 }
